# wolf-sv-compiler

./: .gitignore  CMakeLists.txt  README.md
docs/: graph.md  overview.md
docs/TODO/: elaborate.md  graph.md
docs/reference/: slang-netlist-data-flow-rationale.md
include/: elaborate.hpp  graph.hpp
src/: elaborate.cpp  graph.cpp  main.cpp
testcase/t0/: traffic_light.json  traffic_light.sv
testcase/t0-module-hier/: t0_module_hier.json  t0_module_hier.sv
testcase/t1/: struct_interface.json  struct_interface.sv
testcase/t2-ifstmt/: ifstmt.json  ifstmt.sv
